kubernete/deployment/kubernetes/application-service/fpm-with-nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-service-webserver
  namespace: laravel-kubectl
  labels:
    tier: application-backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: application-backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: application-backend
        layer: webserver
    spec:
#      initContainers:
#        - name: migrations
#          imagePullPolicy: Always
#          image: kawsarpolygon/laravel-kubernete-cli:v0.0.1
#          command:
#            - php
#          args:
#            - artisan
#            - migrate
#            - --force
#          envFrom:
#            - configMapRef:
#                name: application-service
#            - secretRef:
#                name: application-service
      containers:
        - name: webserver
          imagePullPolicy: Always
          image: kawsarpolygon/laravel-kubernete-fpm:v0.0.1
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
