kubernete/deployment/kubernetes/application-service/fpm-with-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-service-webserver
  namespace: laravel-kubectl
spec:
  ingressClassName: nginx
  rules:
    - host: laravelkubernet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service-webserver
                port:
                  number: 80
